<package>
	<name>euler_angle</name>
	<version>0.0.1</version>
	<description>The euler angle package</description>
	<author email="todo@todo.com">gavin</author>
	<maintainer email="todo@todo.com">gavin</maintainer>>
	
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>
</package>
